[AAGG-6] minor changes

--- a/notebooks/recommendation_ranking_random_forest_classifier.ipynb
+++ b/notebooks/recommendation_ranking_random_forest_classifier.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f066d995-f295-452f-abe1-77e557429e14",
+   "metadata": {},
+   "source": [
+    "Train the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "3900b543-5827-4269-a959-cba5771763be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "dad7b0f6-b147-4cd7-966d-ee9d25ee7df2",
    "metadata": {},
    "outputs": [
@@ -15,98 +36,82 @@
     }
    ],
    "source": [
-    "#\n",
-    "#\n",
-    "# Train the model \n",
-    "#\n",
-    "#\n",
-    "# train_model.py\n",
-    "import pandas as pd #(for handling and processing tabular data.)\n",
-    "from sklearn.ensemble import RandomForestClassifier #(ML mode from sklearn.ensemble , collection of decision trees)\n",
-    "from sklearn.multioutput import MultiOutputClassifier#(wrapper that allows a classifier to handle multiple target)\n",
-    "import joblib#(library to save and load Python objects and for store trined models)\n",
-    "\n",
     "def train_graph_model(): \n",
     "    \n",
-    "    df = pd.read_csv(\"Recommendation_graph_data.csv\") #Load the dataset ude for training \n",
-    "    X = df[[\"num_num\", \"num_cat\", \"has_dt\"]] #features\n",
-    "    #number of numerical,categorical,boolean flag indicating datetime\n",
-    "    y = df.drop(columns=[\"num_num\", \"num_cat\", \"has_dt\"]) #Labels (Drop feature columns to get lables\n",
+    "    df = pd.read_csv(\"Recommendation_graph_data.csv\")\n",
+    "    X = df[[\"num_num\", \"num_cat\", \"has_dt\"]] \n",
+    "    y = df.drop(columns=[\"num_num\", \"num_cat\", \"has_dt\"]) \n",
     "    \n",
-    "    # Train model\n",
+    "    \n",
     "    model = MultiOutputClassifier(\n",
-    "        RandomForestClassifier(n_estimators=100, random_state=42) #use 100 decision trees #random_state - split happens in same way\n",
+    "        RandomForestClassifier(n_estimators=100, random_state=42) \n",
     "    )\n",
-    "    model.fit(X, y) #trains the model on the dataset\n",
     "    \n",
-    "    # Save model\n",
-    "    joblib.dump(model, \"graph_recommender_model.pkl\") #save as .pkl file\n",
+    "    model.fit(X, y)\n",
+    "    \n",
+    "   \n",
+    "    joblib.dump(model, \"graph_recommender_model.pkl\")\n",
     "    print(\"Model trained and saved!\")\n",
     "\n",
-    "if __name__ == \"__main__\":#Run it directly → Code runs. #Import it → Code does not run.\n",
+    "if __name__ == \"__main__\":\n",
     "\n",
     "\n",
     "    train_graph_model()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "0d73fae5-6f2b-47e5-b8eb-e71275a3fa57",
+   "cell_type": "markdown",
+   "id": "63936c5b-1be6-4eaf-8b32-26e2759e5967",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked']\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter columns (comma-separated):  Age,Fare\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Recommended Graph Types:\n",
-      "- Scatter\n"
-     ]
-    }
-   ],
    "source": [
-    "import pandas as pd #handle data\n",
-    "import joblib #load pretrained models\n",
-    "\n",
+    " Column Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6903312f-a4ef-402b-b16d-69e4b3a3b31d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def analyze_columns(df):\n",
     "    num_num = 0\n",
     "    num_cat = 0\n",
-    "    has_dt = 0 # number of columns( numerical,categorical, and has datetime)\n",
+    "    has_dt = 0 \n",
     "    \n",
-    "    for col in df.columns: #df.columns-> dataset columns\n",
-    "        dtype = df[col].dtype#type of coulumn int64,object(string),float\n",
+    "    for col in df.columns: \n",
+    "        dtype = df[col].dtype\n",
     "        \n",
-    "        if pd.api.types.is_numeric_dtype(dtype): #pandas API to mannupulate data types\n",
+    "        if pd.api.types.is_numeric_dtype(dtype): \n",
     "            num_num += 1\n",
     "        else:\n",
     "           \n",
-    "            temp_col = pd.to_datetime(df[col], errors=\"coerce\")#convert to datetime ,coerce-> Cannot convert replace with NAN\n",
+    "            temp_col = pd.to_datetime(df[col], errors=\"coerce\")\n",
     "\n",
-    "            if temp_col.notna().sum() > 0:  # At least one valid datetime (sum of not a time rows),notna-> for check missing vlues\n",
+    "            if temp_col.notna().sum() > 0: \n",
     "                has_dt = 1\n",
     "            else:\n",
     "                num_cat += 1\n",
     "\n",
-    "    return num_num, num_cat, has_dt\n",
-    "\n",
-    "\n",
-    "def get_user_columns(dataset_path):#prompts the user to input column names from a dataset..This is passed by NLP part after SQL query generation\n",
+    "    return num_num, num_cat, has_dt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da280139-a555-423c-8a3f-201e3aeaeb14",
+   "metadata": {},
+   "source": [
+    "Get user columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "01bfead1-30d4-4e9b-9a54-a4ddcf927c3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_columns(dataset_path):\n",
     "    df = pd.read_csv(dataset_path)\n",
     "    print(\"\\nAvailable columns:\", df.columns.tolist())\n",
     "    \n",
@@ -117,30 +122,54 @@
     "        \n",
     "        if valid_cols:\n",
     "            return valid_cols\n",
-    "        print(\"Error: No valid columns selected. Try again.\") \n",
-    "\n",
+    "        print(\"Error: No valid columns selected. Try again.\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "162e11f0-7b20-4b7a-a933-29bf91969156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Main function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d73fae5-6f2b-47e5-b8eb-e71275a3fa57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked']\n"
+     ]
+    }
+   ],
+   "source": [
     "def main():\n",
-    "    # Load model\n",
+    "    \n",
     "    model = joblib.load(\"graph_recommender_model.pkl\")\n",
     "    \n",
-    "    # Get user input\n",
-    "    dataset_path = \"Datasets/titanic.csv\" # User database\n",
+    "  \n",
+    "    dataset_path = \"Datasets/titanic.csv\" \n",
     "    selected_cols = get_user_columns(dataset_path)\n",
     "    \n",
-    "    # Analyze columns\n",
     "    df = pd.read_csv(dataset_path)[selected_cols]\n",
     "    num_num, num_cat, has_dt = analyze_columns(df)\n",
     "    \n",
-    "    # Create input DataFrame with proper feature names\n",
     "    input_df = pd.DataFrame(\n",
     "        [[num_num, num_cat, has_dt]],\n",
-    "        columns=[\"num_num\", \"num_cat\", \"has_dt\"]  # Match training feature names\n",
+    "        columns=[\"num_num\", \"num_cat\", \"has_dt\"]  \n",
     "    )\n",
     "    \n",
-    "    # Predict\n",
+    "    \n",
     "    pred = model.predict(input_df)\n",
     "    \n",
-    "    # Show results\n",
     "    graphs = [\"Bar\", \"Line\", \"Scatter\", \"Area\", \"Histogram\", \"Box\", \n",
     "             \"Funnel\", \"Tree\", \"Pie\"]\n",
     "    recommendations = [g for g, p in zip(graphs, pred[0]) if p == 1]\n",
